Clean up JavaFX view warnings